# Sourcery-Engine

./: .env.cmake  .env.example.unix.cmake  .env.example.win32.cmake  .gitignore  CMakeLists.txt  README.md  buildUnix.sh  buildWin32MinGW.bat  buildWin32MinGW.sh  buildWin32VS2022.bat  compile_shaders.bat  sonar-project.properties
.github/workflows/: sonar-cloud.yml
shaders/: point_light.frag  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: first_app.cpp  first_app.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  main.cpp  src3_buffer.cpp  src3_camera.h  src3_descriptors.cpp  src3_device.cpp  src3_device.h  src3_frame_info.h  src3_game_object.cpp  src3_game_object.h  src3_model.cpp  src3_model.h  src3_pipeline.cpp  src3_pipeline.h  src3_renderer.h  src3_swap_chain.cpp  src3_swap_chain.h  src3_utils.h  src3_window.cpp  src3_window.h
src/buffer/: src3_buffer.h
src/buffer/uniform/: src3_descriptors.h
src/core/buffer/: src3_buffer.cpp  src3_buffer.h
src/core/buffer/uniform/: src3_descriptors.h  src3_ubo.h
src/core/device/: src3_device.cpp  src3_device.h
src/core/pipeline/: src3_pipeline.cpp  src3_pipeline.h
src/core/swapchain/: src3_swap_chain.cpp  src3_swap_chain.h
src/game/camera/: src3_camera.cpp  src3_camera.h
src/game/ecs/: src3_ecs.h
src/game/gameobject/: src3_game_object.cpp  src3_game_object.h
src/game/keyboard_controller/: keyboard_movement_controller.cpp  keyboard_movement_controller.h
src/game/systems/: src3_physics.cpp  src3_physics.h
src/render/imgui/: src3_imgui.cpp  src3_imgui.h
src/render/model/: src3_model.cpp  src3_model.h
src/render/renderer/: src3_renderer.cpp  src3_renderer.h
src/render/systems/: point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h
src/render/texture/: src3_texture.cpp  src3_texture.h
src/systems/: point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h
src/texture/: src3_texture.h
src/util/: src3_frame_info.h
